# avro_in_c

./: .gitignore  CMakeLists.txt  README.md  meson.build  rebuild.sh  run-avro-person.sh  run-kafka-producer.sh
.devcontainer/: Dockerfile  Dockerfile_centos  devcontainer.json
docker/kafka/: docker-compose.yaml
src/: CMakeLists copy.txt  CMakeLists.txt  main.cpp
src/avro-person/: main.cpp  meson.build
src/common/: DpdkContext.hpp  common.hpp  meson.build
src/kafka-producer/: main.cpp  meson.build
src/mempool/: meson.build  mymempool.hpp
src/utils/: DpdkContext.hpp  Singleton.hpp  meson.build  mymempool.hpp
